webgrammar/src/main/java/de/haumacher/webgrammar/webidl/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package de.haumacher.webgrammar.webidl.parser;

@SuppressWarnings({ "javadoc", "unused", "synthetic-access" })
public class Parser implements ParserConstants {

  final public void ntDefinitions() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 7:
      case 12:
      case 15:
      case 16:
      case 17:
      case 18:
      case 20:
      case 38:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ntExtendedAttributeListNonEmpty();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      ntDefinition();
    }
  }

  final public void ntDefinition() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 7:
      jj_consume_token(7);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        jj_consume_token(8);
        ntReturnType();
        jj_consume_token(9);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
        case 9:
        case 37:
        case 38:
        case 46:
        case 47:
        case 48:
        case 49:
        case 50:
        case 51:
        case 52:
        case 53:
        case 54:
        case 55:
        case 57:
        case 58:
        case 59:
        case 62:
          ntArgumentListNonEmpty();
          break;
        default:
          jj_la1[2] = jj_gen;
          ;
        }
        jj_consume_token(10);
        jj_consume_token(11);
        break;
      case 12:
        ntInterface();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case 12:
      ntInterface();
      break;
    case 15:
      ntPartial();
      break;
    case 16:
      ntDictionary();
      break;
    case 17:
      ntException();
      break;
    case 18:
      ntEnum();
      break;
    case 20:
      ntTypedef();
      break;
    case IDENTIFIER:
      ntImplementsStatement();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ntInterface() throws ParseException {
    jj_consume_token(12);
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 42:
      ntInheritanceNonEmpty();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(13);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 9:
      case 22:
      case 29:
      case 30:
      case 31:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 38:
      case 46:
      case 47:
      case 48:
      case 49:
      case 50:
      case 51:
      case 52:
      case 53:
      case 54:
      case 55:
      case 57:
      case 58:
      case 59:
      case 60:
      case 61:
      case 62:
      case 63:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ntExtendedAttributeListNonEmpty();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      ntInterfaceMember();
    }
    jj_consume_token(14);
    jj_consume_token(11);
  }

  final public void ntPartial() throws ParseException {
    jj_consume_token(15);
    ntPartialDefinition();
  }

  final public void ntPartialDefinition() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
      ntPartialInterface();
      break;
    case 16:
      ntPartialDictionary();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ntPartialInterface() throws ParseException {
    jj_consume_token(12);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(13);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 9:
      case 22:
      case 29:
      case 30:
      case 31:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 38:
      case 46:
      case 47:
      case 48:
      case 49:
      case 50:
      case 51:
      case 52:
      case 53:
      case 54:
      case 55:
      case 57:
      case 58:
      case 59:
      case 60:
      case 61:
      case 62:
      case 63:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ntExtendedAttributeListNonEmpty();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      ntInterfaceMember();
    }
    jj_consume_token(14);
    jj_consume_token(11);
  }

  final public void ntInterfaceMembers() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 9:
      case 22:
      case 29:
      case 30:
      case 31:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 38:
      case 46:
      case 47:
      case 48:
      case 49:
      case 50:
      case 51:
      case 52:
      case 53:
      case 54:
      case 55:
      case 57:
      case 58:
      case 59:
      case 60:
      case 61:
      case 62:
      case 63:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ntExtendedAttributeListNonEmpty();
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      ntInterfaceMember();
    }
  }

  final public void ntInterfaceMember() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 22:
      ntConst();
      break;
    case IDENTIFIER:
    case 9:
    case 29:
    case 30:
    case 31:
    case 32:
    case 33:
    case 34:
    case 35:
    case 36:
    case 46:
    case 47:
    case 48:
    case 49:
    case 50:
    case 51:
    case 52:
    case 53:
    case 54:
    case 55:
    case 57:
    case 58:
    case 59:
    case 60:
    case 61:
    case 62:
    case 63:
      ntAttributeOrOperation();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ntDictionary() throws ParseException {
    jj_consume_token(16);
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 42:
      ntInheritanceNonEmpty();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(13);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 9:
      case 38:
      case 46:
      case 47:
      case 48:
      case 49:
      case 50:
      case 51:
      case 52:
      case 53:
      case 54:
      case 55:
      case 57:
      case 58:
      case 59:
      case 62:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ntExtendedAttributeListNonEmpty();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      ntDictionaryMember();
    }
    jj_consume_token(14);
    jj_consume_token(11);
  }

  final public void ntDictionaryMembers() throws ParseException {
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 9:
      case 38:
      case 46:
      case 47:
      case 48:
      case 49:
      case 50:
      case 51:
      case 52:
      case 53:
      case 54:
      case 55:
      case 57:
      case 58:
      case 59:
      case 62:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ntExtendedAttributeListNonEmpty();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      ntDictionaryMember();
    }
  }

  final public void ntDictionaryMember() throws ParseException {
    ntType();
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      ntDefaultNonEmpty();
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    jj_consume_token(11);
  }

  final public void ntPartialDictionary() throws ParseException {
    jj_consume_token(16);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(13);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 9:
      case 38:
      case 46:
      case 47:
      case 48:
      case 49:
      case 50:
      case 51:
      case 52:
      case 53:
      case 54:
      case 55:
      case 57:
      case 58:
      case 59:
      case 62:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ntExtendedAttributeListNonEmpty();
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      ntDictionaryMember();
    }
    jj_consume_token(14);
    jj_consume_token(11);
  }

  final public void ntDefault() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      ntDefaultNonEmpty();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
  }

  final public void ntDefaultValue() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
    case FLOAT:
    case 23:
    case 24:
    case 25:
    case 26:
    case 27:
    case 28:
      ntConstValue();
      break;
    case STRING:
      jj_consume_token(STRING);
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ntException() throws ParseException {
    jj_consume_token(17);
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 42:
      ntInheritanceNonEmpty();
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
    jj_consume_token(13);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 9:
      case 22:
      case 38:
      case 46:
      case 47:
      case 48:
      case 49:
      case 50:
      case 51:
      case 52:
      case 53:
      case 54:
      case 55:
      case 57:
      case 58:
      case 59:
      case 62:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ntExtendedAttributeListNonEmpty();
        break;
      default:
        jj_la1[26] = jj_gen;
        ;
      }
      ntExceptionMember();
    }
    jj_consume_token(14);
    jj_consume_token(11);
  }

  final public void ntExceptionMembers() throws ParseException {
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 9:
      case 22:
      case 38:
      case 46:
      case 47:
      case 48:
      case 49:
      case 50:
      case 51:
      case 52:
      case 53:
      case 54:
      case 55:
      case 57:
      case 58:
      case 59:
      case 62:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ntExtendedAttributeListNonEmpty();
        break;
      default:
        jj_la1[28] = jj_gen;
        ;
      }
      ntExceptionMember();
    }
  }

  final public void ntInheritance() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 42:
      ntInheritanceNonEmpty();
      break;
    default:
      jj_la1[29] = jj_gen;
      ;
    }
  }

  final public void ntEnum() throws ParseException {
    jj_consume_token(18);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(13);
    ntEnumValueList();
    jj_consume_token(14);
    jj_consume_token(11);
  }

  final public void ntEnumValueList() throws ParseException {
    jj_consume_token(STRING);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 19:
        ;
        break;
      default:
        jj_la1[30] = jj_gen;
        break label_10;
      }
      jj_consume_token(19);
      jj_consume_token(STRING);
    }
  }

  final public void ntEnumValues() throws ParseException {
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 19:
        ;
        break;
      default:
        jj_la1[31] = jj_gen;
        break label_11;
      }
      jj_consume_token(19);
      jj_consume_token(STRING);
    }
  }

  final public void ntTypedef() throws ParseException {
    jj_consume_token(20);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      ntExtendedAttributeListNonEmpty();
      break;
    default:
      jj_la1[32] = jj_gen;
      ;
    }
    ntType();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(11);
  }

  final public void ntImplementsStatement() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(21);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(11);
  }

  final public void ntConst() throws ParseException {
    jj_consume_token(22);
    ntConstType();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(8);
    ntConstValue();
    jj_consume_token(11);
  }

  final public void ntConstValue() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 24:
    case 25:
      ntBooleanLiteral();
      break;
    case FLOAT:
    case 26:
    case 27:
    case 28:
      ntFloatLiteral();
      break;
    case INTEGER:
      jj_consume_token(INTEGER);
      break;
    case 23:
      jj_consume_token(23);
      break;
    default:
      jj_la1[33] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ntBooleanLiteral() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 24:
      jj_consume_token(24);
      break;
    case 25:
      jj_consume_token(25);
      break;
    default:
      jj_la1[34] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ntFloatLiteral() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case 26:
      jj_consume_token(26);
      jj_consume_token(27);
      break;
    case 27:
      jj_consume_token(27);
      break;
    case 28:
      jj_consume_token(28);
      break;
    default:
      jj_la1[35] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ntAttributeOrOperation() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 29:
      jj_consume_token(29);
      ntStringifierAttributeOrOperation();
      break;
    case 30:
    case 61:
    case 63:
      ntAttribute();
      break;
    case IDENTIFIER:
    case 9:
    case 31:
    case 32:
    case 33:
    case 34:
    case 35:
    case 36:
    case 46:
    case 47:
    case 48:
    case 49:
    case 50:
    case 51:
    case 52:
    case 53:
    case 54:
    case 55:
    case 57:
    case 58:
    case 59:
    case 60:
    case 62:
      ntOperation();
      break;
    default:
      jj_la1[36] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ntStringifierAttributeOrOperation() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 30:
    case 61:
    case 63:
      ntAttribute();
      break;
    case IDENTIFIER:
    case 9:
    case 46:
    case 47:
    case 48:
    case 49:
    case 50:
    case 51:
    case 52:
    case 53:
    case 54:
    case 55:
    case 57:
    case 58:
    case 59:
    case 60:
    case 62:
      ntOperationRest();
      break;
    case 11:
      jj_consume_token(11);
      break;
    default:
      jj_la1[37] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ntAttribute() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 61:
      ntInheritNonEmpty();
      break;
    default:
      jj_la1[38] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 63:
      ntReadOnlyNonEmpty();
      break;
    default:
      jj_la1[39] = jj_gen;
      ;
    }
    jj_consume_token(30);
    ntType();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(11);
  }

  final public void ntInherit() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 61:
      ntInheritNonEmpty();
      break;
    default:
      jj_la1[40] = jj_gen;
      ;
    }
  }

  final public void ntReadOnly() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 63:
      ntReadOnlyNonEmpty();
      break;
    default:
      jj_la1[41] = jj_gen;
      ;
    }
  }

  final public void ntOperation() throws ParseException {
    ntQualifiers();
    ntOperationRest();
  }
